--- a/templates/add_card.html
+++ b/templates/add_card.html
@@ -1,20 +1,17 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>Add Card</title>        
-    </head>
-    <body>
-        <h1>Add a new card</h1>
-        <form method="POST">
-            <p>
-                Question:
-                <input type="text" name="question">
-            </p>
-            <p>Answer:
-                <input type="text" name="answer">
-            </p>
-            <button type="submit">Create</button>
-        </form>
-    </body>
-</html>
+{% extends "base.html" %}
+
+{% block title %} Add Card{% endblock %}
+
+{% block content %}
+<h1>Add a new card</h1>
+<form method="POST">
+    <p>
+        Question:
+        <input type="text" name="question">
+    </p>
+    <p>Answer:
+        <input type="text" name="answer">
+    </p>
+    <button type="submit">Create</button>
+</form>
+{% endblock %}
