--- a/templates/card.html
+++ b/templates/card.html
@@ -1,32 +1,26 @@
-<!DOCTYPE html>
-<html>
+{% extends "base.html" %}
 
-<head>
-    <meta charset="UTF-8">
-    <title>Flash Card</title>
-    <link rel="stylesheet" href="/static/card.css">
-</head>
+{% block title %} Card{% endblock %}
 
-<body>
-    <h1>Flash Card</h1>
-    Question: {{ card.question }}
-    Answer: {{card.answer}}
-    <p>
-        <a href="{{url_for('welcome')}}">
-            Home
+{% block content %}
+<h1>Flash Card</h1>
+Question: {{ card.question }}
+Answer: {{card.answer}}
+<p>
+    <a href="{{url_for('welcome')}}">
+        Home
+    </a>
+    <button>
+        {% if index < max_index %}
+        <a href="{{url_for('card_view', index=index+1)}}">
+            Next card
         </a>
-        <button>
-            {% if index < max_index %}
-            <a href="{{url_for('card_view', index=index+1)}}">
-                Next card
-            </a>
-            {% else %}
-            <a href="{{url_for('card_view', index=0)}}">
-                Start Over
-            </a>
-            {% endif %}
-        </button>
-    </p>
-</body>
-
-</html>
+        {% else %}
+        <a href="{{url_for('card_view', index=0)}}">
+            Start Over
+        </a>
+        {% endif %}
+    </button>
+</p>
+<a href="{{url_for('remove_card', index=index)}}">Remove this card</a>
+{% endblock %}
