--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -1,26 +1,25 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>Title</title>
-    </head>
-    <body>
-        <h1>Welcome to my page!</h1>
-        <p>
-            This is the demo application for the course
-            <em>Getting Started with Flask</em>
-            on <a href="https://pluralsight.com">Pluralsight</a>
-        </p>
+{% extends "base.html" %}
 
-        <h2>Flash Cards</h2>
-        <ul>
-            {% for card in cards %}
-            <li>
-                <a href="{{ url_for('card_view', index=loop.index0) }}">
-                    {{ card.question }}
-                </a>
-            </li>
-            {% endfor %}
-        </ul>
-    </body>
-</html>
+{% block title %} Welcome{% endblock %}
+
+{% block content %}
+
+<h1>Welcome to my page!</h1>
+<p>
+    This is the demo application for the course
+    <em>Getting Started with Flask</em>
+    on <a href="https://pluralsight.com">Pluralsight</a>
+</p>
+
+<h2>Flash Cards</h2>
+<ul>
+    {% for card in cards %}
+    <li>
+        <a href="{{ url_for('card_view', index=loop.index0) }}">
+            {{ card.question }}
+        </a>
+    </li>
+    {% endfor %}
+</ul>
+
+{% endblock %}
